src/reg_compiler/snapshots/serenity__reg_compiler__tests__bad_return_type_tests@fun(int, int) -> int_2.snap
---
source: src/reg_compiler/tests.rs
expression: err
---
[compiler] error at src/reg_compiler/emit_ssa/mod.rs[LINE] - [line 1] Expected return type fn([i64, i64, i64], 0), got i64
