src/reg_compiler/snapshots/serenity__reg_compiler__tests__bad_return_type_tests@int_2.0.snap
---
source: src/reg_compiler/tests.rs
expression: err
---
[compiler] error at src/reg_compiler/emit_ssa/mod.rs[LINE] - [line 1] Expected return type i64, got f64
