src/reg_compiler/snapshots/serenity__reg_compiler__tests__ternary_operator_invalid_types@2_2_3.snap
---
source: src/reg_compiler/tests.rs
expression: err
---
[compiler] error at src/reg_compiler/emit_ssa/expressions.rs[LINE] - [line 1] Condition must be a boolean.
