src/reg_compiler/snapshots/serenity__reg_compiler__tests__ternary_operator_invalid_types@true_2_3.14.snap
---
source: src/reg_compiler/tests.rs
expression: err
---
[compiler] error at src/reg_compiler/emit_ssa/expressions.rs[LINE] - [line 1] Branches must have the same type.
